--- a/index.html
+++ b/index.html
@@ -2,48 +2,63 @@
 <html lang="en">
   <head>
     <title>Furniture Emporium</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
       <header>
         <h1>Furniture Emporium</h1>
         <p>
-          Browse our collection of bespoke furniture to find the next piece to
-          bring home.
+          <span class="intro">
+            Browse our collection of bespoke furniture to find the next piece to
+            bring home.</span
+          >
         </p>
       </header>
       <article>
-        <h2>Ergonomic Couch</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$20.00 <s>$25.00</s></p>
-        <button>Add to cart</button>
+        <div class="card">
+          <h2>Ergonomic Couch</h2>
+          <p class="compact">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p class="special">
+            <span class="price-current">$20.00</span> <s>$25.00</s>
+          </p>
+          <button>Add to cart</button>
+        </div>
       </article>
       <article>
-        <h2>Frozen Table</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$49.95 <s>$60.00</s></p>
-        <button>Add to cart</button>
+        <div class="card">
+          <h2>Frozen Table</h2>
+          <p class="compact">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p class="special">
+            <span class="price-current">$49.95</span> <s>$60.00</s>
+          </p>
+          <button>Add to cart</button>
+        </div>
       </article>
       <article>
-        <h2>Handcrafted Chair</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$18.99 <s>$32.99</s></p>
-        <button>Add to cart</button>
+        <div class="card">
+          <h2>Handcrafted Chair</h2>
+          <p class="compact">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p class="special">
+            <span class="price-current">$18.99</span> <s>$32.99</s>
+          </p>
+          <button>Add to cart</button>
+        </div>
       </article>
     </main>
   </body>
